update: separating translation file

--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
         </div>
     </footer>
 
+    <script src="translations.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
